--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     function generateAlerts() {
       // Alert the user with a series of messages
       alert("wag kang pasaway cutie");
-      alert("i hope ur doing well");
-      alert("inom ka ng maraming tubig")
-      alert("ingat ka dyan 🫰🏼")
+      alert("ampingg araa");
+      alert("hope ur doing well")
+      alert("maynta makalingkod raka pauli hehe 🫰🏼")
     }
   </script>
 
